# developtools_profiler

./: OAT.xml  bundle.json
device/base/: BUILD.gn  config.gni
device/base/include/: common.h  epoll_event_poller.h  logging.h  schedule_task_manager.h  test_common.h
device/base/src/: common.cpp  epoll_event_poller.cpp  event_notifier.cpp  schedule_task_manager.cpp  test_common.cpp
device/base/test/: BUILD.gn
device/base/test/unittest/: common_test.cpp  epoll_event_poller_test.cpp  schedule_task_manager_test.cpp  semaphore_test.cpp
device/plugins/api/: BUILD.gn  libhidebug.map
device/plugins/api/include/: manager_interface.h  writer.h
device/plugins/api/src/: buffer_writer.cpp  buffer_writer.h  command_poller.cpp  command_poller.h  hidebug_base.c  main.cpp  plugin_manager.cpp  plugin_manager.h  plugin_module.cpp  plugin_module.h  plugin_watcher.cpp  plugin_watcher.h  writer_adapter.cpp  writer_adapter.h
device/plugins/api/test/: BUILD.gn
device/plugins/api/test/unittest/: buffer_write_test.cpp  command_poller_test.cpp  hidebug_base_test.cpp  plugin_manager_test.cpp  plugin_module_test.cpp  plugin_watcher_test.cpp  writer_adapter_test.cpp
device/plugins/arkts_plugin/test/: BUILD.gn
device/plugins/arkts_plugin/test/resources/: entry-default-signed.hap
device/plugins/arkts_plugin/test/unittest/: arkts_plugin_unittest.cpp
device/plugins/diskio_plugin/: BUILD.gn
device/plugins/diskio_plugin/include/: diskio_data_plugin.h  io_stats.h
device/plugins/diskio_plugin/src/: diskio_data_plugin.cpp  diskio_module.cpp  io_stats.cpp  test_main.cpp
device/plugins/diskio_plugin/test/: BUILD.gn
device/plugins/diskio_plugin/test/unittest/: diskio_data_plugin_unittest.cpp
device/plugins/ffrt_profiler/client/: BUILD.gn
device/plugins/ffrt_profiler/client/include/: ffrt_profiler.h  ffrt_profiler_socker_client.h  ffrt_profiler_write.h
device/plugins/ffrt_profiler/client/src/: ffrt_profiler.cpp  ffrt_profiler_socker_client.cpp  (+1 more)
device/plugins/ffrt_profiler/test/: BUILD.gn
device/plugins/ftrace_plugin/: BUILD.gn  ftrace.gni  libftrace_plugin.map
device/plugins/ftrace_plugin/include/: file_utils.h  flow_controller.h  ftrace_common_type.h  ftrace_field_parser.h  ftrace_fs_ops.h  ftrace_parser.h  result_transporter.h  string_utils.h  sub_event_parser.h
device/plugins/ftrace_plugin/src/: file_utils.cpp  flow_controller.cpp  ftrace_data_reader.cpp  ftrace_field_parser.cpp  ftrace_fs_ops.cpp  ftrace_module.cpp  ftrace_parser.cpp  kernel_symbols_parser.cpp  paged_mem_pool.cpp  printk_formats_parser.cpp  process_utils.cpp  result_transporter.cpp  string_utils.cpp  trace_ops.cpp
device/plugins/ftrace_plugin/test/: BUILD.gn
device/plugins/ftrace_plugin/tools/: ftrace_format_parser.py
device/plugins/memory_plugin/: BUILD.gn
device/plugins/memory_plugin/include/: memory_data_plugin.h  smaps_stats.h
device/plugins/memory_plugin/src/: memory_data_plugin.cpp  memory_module.cpp  smaps_stats.cpp  test_main.cpp
device/plugins/memory_plugin/test/: BUILD.gn
device/plugins/native_daemon/: BUILD.gn  native_daemon_client.cpp
device/plugins/native_daemon/include/: call_stack.h  debug_logger.h  dwarf_encoding.h  hashlistpp.h  hiperf_hilog.h  hook_common.h  hook_manager.h  hook_record.h  hook_record_factory.h  hook_service.h  hook_standalone.h  perf_event_record.h  register.h  smo_map_global.h  stack_builder.h  stack_data_repeater.h  stack_preprocess.h  symbols_file.h  utilities.h  virtual_runtime.h  virtual_thread.h
device/plugins/native_daemon/src/: call_stack.cpp  debug_logger.cpp  dwarf_encoding.cpp  hook_manager.cpp  hook_record.cpp  hook_record_factory.cpp  hook_service.cpp  hook_standalone.cpp  main.cpp  register.cpp  smo_map_global.cpp  stack_builder.cpp  stack_data_repeater.cpp  stack_preprocess.cpp  symbols_file.cpp  utilities.cpp  virtual_runtime.cpp  virtual_thread.cpp
device/plugins/native_daemon/test/: BUILD.gn  native_daemon.gni
device/plugins/network_plugin/: BUILD.gn
device/plugins/network_plugin/include/: network_plugin.h
device/plugins/network_plugin/src/: network_module.cpp  network_plugin.cpp
device/plugins/network_plugin/test/: BUILD.gn
device/plugins/network_profiler/service/: BUILD.gn
device/plugins/network_profiler/test/: BUILD.gn
device/plugins/xpower_plugin/test/: BUILD.gn  xpower_decoder.cpp  xpower_decoder.h  xpower_main.cpp
device/services/ipc/test/: BUILD.gn
hidebug/frameworks/hidebug_ndk/: BUILD.gn  hidebug_backtrace.cpp  hidebug_crash_obj.cpp  hidebug_ndk.cpp  hidebug_perf.cpp
hidebug/frameworks/native/: BUILD.gn  hidebug_base.c
hidebug/frameworks/native/include/: hiappevent_util.h  hidebug_app_thread_cpu.h  hidebug_native_interface.h  hidebug_native_type.h  hidebug_util.h
hidebug/frameworks/native/src/: hiappevent_util.cpp  hidebug_app_thread_cpu.cpp  hidebug_native_interface_impl.cpp  hidebug_util.cpp
hidebug/interfaces/cj/: BUILD.gn  hidebug_ffi.cpp  hidebug_ffi.h
hidebug/test/fuzztest/: BUILD.gn
hidebug/test/fuzztest/hidebug_fuzzer/: hidebug_fuzzer.cpp  hidebug_fuzzer.h  project.xml
hidebug/test/unittest/native/: BUILD.gn  hiappevent_util_test.cpp  hidebug_backtrace_test.cpp  hidebug_malloc_dispatch.cpp  hidebug_native_interface_test.cpp  hidebug_test.cpp  hidebug_util_test.cpp
host/smartperf/client/client_command/: AI_schedule.cpp  BUILD.gn  ByTrace.cpp  CPU.cpp  Capture.cpp  DDR.cpp  Dubai.cpp  FPS.cpp  GPU.cpp  GetLog.cpp  GpuCounter.cpp  GpuCounterCallback.cpp  Network.cpp  Power.cpp  RAM.cpp  README_zh.md  Temperature.cpp  client_control.cpp  control_call_cmd.cpp  cpu_info.cpp  editor_command.cpp  heartbeat.cpp  jitters.cpp  lock_frequency.cpp  navigation.cpp  parse_click_complete_trace.cpp  parse_click_response_trace.cpp  parse_page_fps_trace.cpp  parse_radar.cpp  parse_slide_fps_trace.cpp  parse_start_frame_trace.cpp  parse_trace.cpp  profiler_fps.cpp  sdk_data_recv.cpp  smartperf_command.cpp  smartperf_main.cpp  sp_log.cpp  sp_parse_fps.cpp  sp_profiler_factory.cpp  sp_server_socket.cpp  (+6 more)
protos/types/plugins/gpu_data/: BUILD.gn  gpu_plugin_config.proto  gpu_plugin_result.proto
(+842 files in other folders)
