# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("ohhidebug") {
  include_dirs = [
    "../../interfaces/native/kits/include",
    "../native/include",
  ]

  sources = [ "hidebug_ndk.cpp" ]

  deps = [ "../native:hidebug_native" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "hiview:libucollection_utility",
  ]

  innerapi_tags = [ "ndk" ]
  output_extension = "so"
  part_name = "hiprofiler"
  subsystem_name = "developtools"
}
