# Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//developtools/profiler/hidebug/hidebug.gni")


ohos_fuzztest("HidebugFuzzTest") {
  module_out_path = "hiprofiler/hidebug/"
  fuzz_config_file = "hidebug_fuzzer"
  include_dirs = [
    "hidebug_fuzzer",
    "$hidebug_path/frameworks/native/include",
    "$hidebug_path/interfaces/native/kits/include",
  ]
  sources = [ "hidebug_fuzzer/hidebug_fuzzer.cpp" ]
  deps = [
    "$hidebug_path/frameworks/hidebug_ndk:ohhidebug",
    "$hidebug_path/frameworks/native:hidebug_native",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":HidebugFuzzTest" ]
}